--- a/frontend.html
+++ b/frontend.html
@@ -8,7 +8,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script>
-        const bookRequest = axios.get('http://localhost:4000/books')
+        const bookRequest = axios.get('http://localhost:4000/api/books')
         bookRequest
         .then(({data}) => console.log(data))
         .catch(e => console.log(e.message))
